--- a/public/stylesheets/welcome.css
+++ b/public/stylesheets/welcome.css
@@ -2908,3 +2908,4 @@ noscript div {
 	text-align:center;
 	text-decoration:none
 }
+#mCnt {overflow: hidden; }
